[project]
name = "comfyui_hellomeme"
description = "This repository is the official implementation of the [a/HelloMeme](https://arxiv.org/pdf/2410.22901) ComfyUI interface, featuring both image and video generation functionalities. Example workflow files can be found in the ComfyUI_HelloMeme/workflows directory. Test images and videos are saved in the ComfyUI_HelloMeme/examples directory. Below are screenshots of the interfaces for image and video generation.\nNOTE: 'HelloMeme: Integrating Spatial Knitting Attentions to Embed High-Level and Fidelity-Rich Conditions in Diffusion Models'"
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/HelloVision/ComfyUI_HelloMeme"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "1215d66b-f871-4296-b65a-50ca0ab1999a"
DisplayName = "ComfyUI_HelloMeme"
Icon = "examples/helloicon.ico"
