[project]
name = "comfyui_hellomeme"
description = "This repository is the official implementation of the [a/HelloMeme](https://arxiv.org/pdf/2410.22901) ComfyUI interface"
version = "1.0.3"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/HelloVision/ComfyUI_HelloMeme"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hellomeme-api"
DisplayName = "hellomeme-api"
Icon = "examples/helloicon.png"
