[project]
name = "comfyui_hellomeme"
description = "This repository is the official implementation of the [a/HelloMeme](https://arxiv.org/pdf/2410.22901) ComfyUI interface"
version = "1.2.2"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/HelloVision/ComfyUI_HelloMeme"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hellomeme-api"
DisplayName = "hellomeme-api"
Icon = "https://github.com/HelloVision/ComfyUI_HelloMeme/blob/eee70819a114a44c4c689c865b42fa0e523a31e5/examples/helloicon.png"
